<resources>
    <string name="app_name">MyRecipeApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--    about page-->
    <string name="about_app">About MyRecipeApp</string>
    <string name="developer">Developed by: Edison N. Kiseh</string>
    <string name="version">Version: 1.0</string>
    <string name="about_description">Unlike other recipe apps that already come with other recipes for you to use. This app doesn\'t. Instead this is YOUR own personal electronic recipe book where you will be able to create, manage, edit your own recipes and store them for future use if needed. Get ready to start your own recipe journey! Happy cooking!!</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about_page">AboutPage</string>

    <string name="empty_recipes_message">Add recipes to view them here!</string>

    <!--Add recipe layout file-->
    <string name="addImage">Click to add image</string>
    <string name="recipeNameTag">Recipe name</string>
    <string name="preparationTimeTag">Preparation time</string>
    <string name="timeTag">Time in minutes</string>
    <string name="descriptionTag">Description</string>
    <string name="ingredientsTag">Ingredients</string>
    <string name="ingredientNameTag">Ingredient name</string>
    <string name="addIngredientTag">Add ingredient</string>
    <string name="stepsTag">Steps</string>
    <string name="nextStepTag">Enter next step</string>
    <string name="saveStepTag">Save step</string>
    <string name="saveRecipeTag">Save recipe</string>
    <string name="changeImage">Change image</string>
    <string name="timeInMinutes">Time in minutes</string>

    <!--Home-->
    <string name="hello">Hello</string>
    <string name="foodie">foodie!</string>
    <string name="cookQuestion">What do you feel like cooking today?</string>
    <string name="fab_description">Add new item</string>
    <string name="noodles_description">Image of noodles</string>

    <string name="food_image_description">Food image</string>

    <string name="ingredientCount">Ingredients: 10</string>
    <string name="stepCount">Steps: 15</string>


</resources>