<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:gravity="center">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/home_recipe_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/food_image_description"
                android:src="@drawable/food"
                android:layout_gravity="center"
                android:scaleType="centerCrop" />

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="6dp">

            <TextView
                android:id="@+id/home_recipe_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginBottom="10sp"
                android:text="@string/app_name"/>

            <TextView
                android:id="@+id/ingredient_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ingredientCount"/>

            <TextView
                android:id="@+id/steps_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10sp"
                android:text="@string/stepCount"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
