<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeInfo">

    <ImageView
        android:id="@+id/food_image"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/middle_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="23dp"
        app:layout_constraintTop_toBottomOf="@+id/food_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/food_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text=""
            android:paddingBottom="10dp"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ImageView
            android:id="@+id/clock"
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/clock3"
            app:layout_constraintTop_toBottomOf="@id/food_name"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/options"
            android:layout_width="35sp"
            android:layout_height="35sp"
            android:contentDescription="@string/food_image_description"
            android:src="@drawable/options"
            app:layout_constraintTop_toTopOf="@id/food_name"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginStart="6dp"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/food_name"
            app:layout_constraintStart_toEndOf="@id/clock"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clock">

            <Button
                android:id="@+id/ingredients"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/ingredientsTag"
                android:textColor="@color/white"
                android:backgroundTint="@color/SeaGreen"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <Button
                android:id="@+id/steps_button"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/stepsTag"
                android:textColor="@color/white"
                android:backgroundTint="@color/SeaGreen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="310dp"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@id/buttons"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:id="@+id/viewContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="20dp"
                    android:text=""
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
